--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
   background-color: #282c34;
 }
@@ -23,14 +23,41 @@
   color: #09d3ac;
 }
 
-/* .search-form {
+.search-bar {
+  background:white;
+}  */
+
+.App {
+  min-height: 100vh;
+  background-image: linear-gradient(120deg, #1a2d52 0%, #3a5894 100%);
+}
+
+.search-form {
+  min-height: 10vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.search-bar {
+  width: 50%;
+  border: none;
+  padding: 10px;
   justify-content: center;
 }
 
-.autocomplete {
-  justify-content: center;
-} */
+.football-stats {
+  display: grid;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  
+}
 
-.search-bar {
-  background:white;
-} 
+@media all and (min-width: 600px) {
+  .football-stats {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+
+}
