--- a/client/src/Routes/Sm.css
+++ b/client/src/Routes/Sm.css
@@ -1,9 +1,8 @@
-.footballstats-placeholder {
+.sm-placeholder {
   background: white;
   justify-content: center;
   margin-bottom: 2%;
   opacity: 0.9;
   text-align: center;
   border-radius: 2%;
-
 }
