--- a/client/src/components/Allsvenskan.css
+++ b/client/src/components/Allsvenskan.css
@@ -4,7 +4,7 @@
 }
 
 .App-header {
-  background: rgb(76, 102, 124);
+  background: linear-gradient(to top, #0c3483 0%, #a2b6df 100%, #6b8cce 100%, #a2b6df 100%);
   border-style: outset;
 }
 
