--- a/client/src/Routes/Schedule.css
+++ b/client/src/Routes/Schedule.css
@@ -1,8 +1,19 @@
 .footballstats-placeholder {
-  background: white;
+  display: grid;
+  background-image: linear-gradient(45deg, #93a5cf 0%, #e4efe9 100%);
   justify-content: center;
   margin-bottom: 2%;
+  margin-left: 20%;
   opacity: 0.9;
   text-align: center;
   border-radius: 2%;
+}
+
+@media all and (min-width: 600px) {
+  .footballstats-placeholder {
+  display: grid;
+  justify-content: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  }
 }
