--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -1,3 +1,15 @@
 .menu-button {
   background: white;
 }
+
+body {
+  background: url('../Football.jpeg');
+  background-size: cover;
+}
+
+.logo-name {
+  color: aliceblue;
+  text-align: center;
+  opacity: 0.9;
+  font-style: italic;
+}
