--- a/client/src/Routes/Schedule.css
+++ b/client/src/Routes/Schedule.css
@@ -1,9 +1,10 @@
 .footballstats-placeholder {
+  width: 300px;
   display: grid;
   background-image: linear-gradient(45deg, #93a5cf 0%, #e4efe9 100%);
   justify-content: center;
   margin-bottom: 2%;
-  margin-left: 20%;
+  margin-left: 10px;
   opacity: 0.9;
   text-align: center;
   border-radius: 2%;
