--- a/client/src/components/Smspecial.css
+++ b/client/src/components/Smspecial.css
@@ -1,6 +1,6 @@
 .App {
   min-height: 100vh;
-  background-image: linear-gradient(120deg, #ced4e2 0%, #3a5894 100%);
+  /* background-image: linear-gradient(120deg, #ced4e2 0%, #3a5894 100%); */
 }
 
 .App-header {
