--- a/client/src/components/Schedule.css
+++ b/client/src/components/Schedule.css
@@ -1,13 +1,14 @@
 .footballstats-placeholder {
   width: 300px;
   display: grid;
-  background-image: linear-gradient(45deg, #93a5cf 0%, #e4efe9 100%);
+  background-image: linear-gradient(45deg, #6d84bb 0%, #e4efe9 100%);
   justify-content: center;
-  margin-bottom: 2%;
+  margin-bottom: 8%;
   margin-left: 10px;
   opacity: 0.9;
   text-align: center;
   border-radius: 2%;
+  box-shadow: 10px 10px 8px 10px #888888;
 }
 
 @media all and (min-width: 600px) {
