Call endpoint in client

--- a/client/src/Routes/Header.css
+++ b/client/src/Routes/Header.css
@@ -2,10 +2,10 @@
   background: white;
 }
 
-body {
+/* body {
   background: url('../Football.jpeg');
   background-size: cover;
-}
+} */
 
 .logo-name {
   color: aliceblue;
